--- a/EngineClassesUnitTest/EngineClassesUnitTest.csproj
+++ b/EngineClassesUnitTest/EngineClassesUnitTest.csproj
@@ -25,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\EngineClassesUnitTest.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -52,6 +53,8 @@
   <ItemGroup>
     <Compile Include="EngineClassesUnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="EngineClassesUnitTest2.cs" />
+    <Compile Include="EngineClassesUnitTest3.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EngineClasses\EngineClasses.csproj">
